--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
   <script defer src="js/contact.js"></script>
 </head>
 <body>
- <a class="skip-link" href="#contenido">Saltar al contenido</a>
+ 
 <header class="topbar">
   <div class="topbar__inner container">
     <a class="brand" href="index.html" aria-label="Inicio">
@@ -33,7 +33,7 @@
       <a href="calendario.html">Calendario</a>
       <a href="noticias.html">Noticias</a>
       <a href="contacto.html">Contacto</a>
-    </nav>
+    
 
     <div class="topbar__actions">
       <a id="nav-login" class="btn btn--ghost" href="login.html">Iniciar Sesión</a>
@@ -41,6 +41,7 @@
 
       <a id="nav-zona" class="btn btn--chip" href="zona.html" style="display:none;">Mi Zona</a>
       <button id="logout-btn" class="btn btn--ghost" style="display:none;">Cerrar sesión</button>
+    </nav>
     </div>
   </div>
 </header>
@@ -66,5 +67,6 @@
   <footer class="site-footer">
     <small>© 2025 F1FanZone — Proyecto Desarrollo Web.</small>
   </footer>
+  <script defer src="js/nav.js"></script>
 </body>
 </html>
