--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   <script defer src="js/main.js"></script>
 </head>
 <body>
-  <a class="skip-link" href="#contenido">Saltar al contenido</a>
 <header class="topbar">
   <div class="topbar__inner container">
     <a class="brand" href="index.html" aria-label="Inicio">
@@ -40,14 +39,15 @@
       <a href="calendario.html">Calendario</a>
       <a href="noticias.html">Noticias</a>
       <a href="contacto.html">Contacto</a>
-    </nav>
+    
 
     <div class="topbar__actions">
       <a id="nav-login" class="btn btn--ghost" href="login.html">Iniciar Sesión</a>
       <a id="nav-registro" class="btn btn--primary" href="registro.html">Registro</a>
 
-      <a id="nav-zona" class="btn btn--chip" href="zona.html" style="display:none;">Mi Zona</a>
+      <a id="nav-zona" class="btn btn--ghost" href="zona.html" style="display:none;">Mi Zona</a>
       <button id="logout-btn" class="btn btn--ghost" style="display:none;">Cerrar sesión</button>
+    </nav>
     </div>
   </div>
 </header>
@@ -195,5 +195,6 @@
   <footer class="site-footer">
     <small>© 2025 F1FanZone — Proyecto Desarrollo Web.</small>
   </footer>
+  <script defer src="js/nav.js"></script>
 </body>
 </html>
